<resources>
    <string name="app_name">MovieApp</string>
    <string name="moviedb">MovieDB</string>
    <string name="find_your_movies">Find your movies</string>
    <string name="search_here">Search Here ...</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="load_more">Load More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>