<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@color/primary_dark">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="29dp">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="29dp"
                android:layout_marginTop="50dp"
                android:text="@string/moviedb"
                android:textSize="36sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="29dp"
                android:layout_marginTop="22dp"
                android:text="@string/find_your_movies"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/edit_search"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins"
                android:hint="@string/search_here"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:textColor="@color/lightgray"
                android:textColorHint="@color/lightgray"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_search"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search"
                android:layout_width="48dp"
                android:layout_height="54dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="29dp"
                android:hint="@string/search"
                app:backgroundTint="@color/secondary_dark"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_search"
                app:iconSize="19dp"
                app:iconTint="@color/lightgray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_search"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="29dp"
                android:layout_marginTop="22dp"
                android:text="@string/category"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@+id/edit_search"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="23dp"
                android:layout_marginTop="6dp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@+id/category"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="29dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/rv_categories"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_more"
                android:layout_marginStart="29dp"
                android:layout_marginBottom="29dp"
                android:backgroundTint="@color/secondary_dark"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/lightgray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_movies"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="29dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Watch List"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="@color/teal"
        app:icon="@drawable/baseline_bookmark_24"
        app:iconGravity="textEnd"
        app:iconSize="16dp" />
</FrameLayout>
